[gd_scene load_steps=5 format=2]

[ext_resource path="res://ARM/ARM.gd" type="Script" id=1]
[ext_resource path="res://ARM/Area2D.gd" type="Script" id=2]

[sub_resource type="CanvasItemMaterial" id=1]
render_priority = 8
blend_mode = 1
light_mode = 1

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( 14.6342, -1.72504, 12.7465, -728.508, -9.90656, -728.508, -15.5698, 0.16272 )

[node name="ARM_Root" type="Node2D"]
script = ExtResource( 1 )

[node name="ARM_ARM" type="Line2D" parent="."]
self_modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
points = PoolVector2Array( 0, 0, 0, -150 )
default_color = Color( 1, 1, 1, 1 )

[node name="ARM_ARM2" type="Line2D" parent="ARM_ARM"]
self_modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
position = Vector2( 0, -150 )
points = PoolVector2Array( 0, 0, 0, -50 )
default_color = Color( 1, 1, 1, 1 )

[node name="ARM_ARM3" type="Line2D" parent="ARM_ARM/ARM_ARM2"]
self_modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
position = Vector2( 0, -50 )
points = PoolVector2Array( 0, 0, 0, -50 )
default_color = Color( 1, 1, 1, 1 )

[node name="ARM_ARM4" type="Line2D" parent="ARM_ARM/ARM_ARM2/ARM_ARM3"]
self_modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
position = Vector2( 0, -50 )
points = PoolVector2Array( 0, 0, 0, -50 )
default_color = Color( 1, 1, 1, 1 )

[node name="ARM_ARM5" type="Line2D" parent="ARM_ARM/ARM_ARM2/ARM_ARM3/ARM_ARM4"]
self_modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
position = Vector2( 0, -50 )
points = PoolVector2Array( 0, 0, 0, -50 )
default_color = Color( 1, 1, 1, 1 )

[node name="ARM_ARM6" type="Line2D" parent="ARM_ARM/ARM_ARM2/ARM_ARM3/ARM_ARM4/ARM_ARM5"]
self_modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
position = Vector2( 0, -50 )
points = PoolVector2Array( 0, 0, 0, -50 )
default_color = Color( 1, 1, 0.996078, 1 )

[node name="ARM_ARM7" type="Line2D" parent="ARM_ARM/ARM_ARM2/ARM_ARM3/ARM_ARM4/ARM_ARM5/ARM_ARM6"]
self_modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
position = Vector2( 0, -50 )
points = PoolVector2Array( 0, 0, 0, -50 )
default_color = Color( 1, 1, 1, 1 )

[node name="ARM_ARM8" type="Line2D" parent="ARM_ARM/ARM_ARM2/ARM_ARM3/ARM_ARM4/ARM_ARM5/ARM_ARM6/ARM_ARM7"]
self_modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
position = Vector2( 0, -50 )
points = PoolVector2Array( 0, 0, 0, -50 )
width = 7.0
default_color = Color( 1, 1, 1, 1 )

[node name="ARM_ARM9" type="Line2D" parent="ARM_ARM/ARM_ARM2/ARM_ARM3/ARM_ARM4/ARM_ARM5/ARM_ARM6/ARM_ARM7/ARM_ARM8"]
self_modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
position = Vector2( 0, -50 )
points = PoolVector2Array( 0, 0, 0, -50 )
width = 5.0
default_color = Color( 1, 1, 1, 1 )

[node name="ARM_ARM10" type="Line2D" parent="ARM_ARM/ARM_ARM2/ARM_ARM3/ARM_ARM4/ARM_ARM5/ARM_ARM6/ARM_ARM7/ARM_ARM8/ARM_ARM9"]
self_modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
position = Vector2( 0, -50 )
points = PoolVector2Array( 0, 0, 0, -50 )
width = 5.0
default_color = Color( 1, 1, 1, 1 )

[node name="ARM_ARM11" type="Line2D" parent="ARM_ARM/ARM_ARM2/ARM_ARM3/ARM_ARM4/ARM_ARM5/ARM_ARM6/ARM_ARM7/ARM_ARM8/ARM_ARM9/ARM_ARM10"]
self_modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
position = Vector2( 0, -50 )
points = PoolVector2Array( 0, 0, 0, -50 )
width = 5.0
default_color = Color( 1, 1, 1, 1 )

[node name="ARM_ARM12" type="Line2D" parent="ARM_ARM/ARM_ARM2/ARM_ARM3/ARM_ARM4/ARM_ARM5/ARM_ARM6/ARM_ARM7/ARM_ARM8/ARM_ARM9/ARM_ARM10/ARM_ARM11"]
self_modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
position = Vector2( 0, -50 )
points = PoolVector2Array( 0, 0, 0, -50 )
width = 5.0
default_color = Color( 1, 1, 1, 1 )

[node name="ARM_ARMF" type="Line2D" parent="ARM_ARM/ARM_ARM2/ARM_ARM3/ARM_ARM4/ARM_ARM5/ARM_ARM6/ARM_ARM7/ARM_ARM8/ARM_ARM9/ARM_ARM10/ARM_ARM11/ARM_ARM12"]
material = SubResource( 1 )
position = Vector2( 0, -50 )
points = PoolVector2Array( 0, 0, 0, -10 )
width = 5.0
default_color = Color( 1, 0.509333, 0.08, 1 )

[node name="Area2D2" type="Area2D" parent="."]
visible = false
script = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D2"]
visible = false

[node name="Area2D3" type="KinematicBody2D" parent="."]
motion/sync_to_physics = true

[node name="Area2D" type="RigidBody2D" parent="."]
mode = 3
gravity_scale = 0.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
build_mode = 1

[node name="Polygon2D" type="Polygon2D" parent="Area2D"]
visible = false

[node name="LightOccluder2D" type="LightOccluder2D" parent="Area2D"]
occluder = SubResource( 2 )
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_Area2D_body_exited"]
[connection signal="body_shape_entered" from="Area2D2" to="." method="_on_Area2D_body_shape_entered"]
[connection signal="body_shape_exited" from="Area2D2" to="." method="_on_Area2D_body_shape_exited"]
